--- a/lab-feature_eng.ipynb
+++ b/lab-feature_eng.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
       "\u001b[31mKeyError\u001b[39m: 2",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[32m/var/folders/t_/x96_vhf11l5ftxgh5c2jjr0m0000gn/T/ipykernel_52760/3862731868.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df = df.drop([\u001b[33m'PassengerId'\u001b[39m, \u001b[33m'Name'\u001b[39m, \u001b[33m'Cabin'\u001b[39m], axis=\u001b[32m2\u001b[39m)\n\u001b[32m      2\u001b[39m \n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Convert categorical columns into numeric using dummies\u001b[39;00m\n\u001b[32m      4\u001b[39m df = pd.get_dummies(df, drop_first=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[32m/var/folders/t_/x96_vhf11l5ftxgh5c2jjr0m0000gn/T/ipykernel_52760/4247845492.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df = df.drop([\u001b[33m'PassengerId'\u001b[39m, \u001b[33m'Name'\u001b[39m, \u001b[33m'Cabin'\u001b[39m], axis=\u001b[32m2\u001b[39m)\n\u001b[32m      2\u001b[39m \n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Convert categorical columns into numeric using dummies\u001b[39;00m\n",
       "\u001b[32m/opt/anaconda3/envs/baseroot2/lib/python3.12/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   5577\u001b[39m                 weight  \u001b[32m250.0\u001b[39m   \u001b[32m150.0\u001b[39m\n\u001b[32m   5578\u001b[39m         falcon  speed   \u001b[32m320.0\u001b[39m   \u001b[32m250.0\u001b[39m\n\u001b[32m   5579\u001b[39m                 weight  \u001b[32m1.0\u001b[39m     \u001b[32m0.8\u001b[39m\n\u001b[32m   5580\u001b[39m         \"\"\"\n\u001b[32m-> \u001b[39m\u001b[32m5581\u001b[39m         return super().drop(\n\u001b[32m   5582\u001b[39m             labels=labels,\n\u001b[32m   5583\u001b[39m             axis=axis,\n\u001b[32m   5584\u001b[39m             index=index,\n",
       "\u001b[32m/opt/anaconda3/envs/baseroot2/lib/python3.12/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   4769\u001b[39m \n\u001b[32m   4770\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   4771\u001b[39m             \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mor\u001b[39;00m columns \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   4772\u001b[39m                 \u001b[38;5;28;01mraise\u001b[39;00m ValueError(\u001b[33m\"Cannot specify both 'labels' and 'index'/'columns'\"\u001b[39m)\n\u001b[32m-> \u001b[39m\u001b[32m4773\u001b[39m             axis_name = self._get_axis_name(axis)\n\u001b[32m   4774\u001b[39m             axes = {axis_name: labels}\n\u001b[32m   4775\u001b[39m         \u001b[38;5;28;01melif\u001b[39;00m index \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mor\u001b[39;00m columns \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   4776\u001b[39m             axes = {\u001b[33m\"index\"\u001b[39m: index}\n",
       "\u001b[32m/opt/anaconda3/envs/baseroot2/lib/python3.12/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(cls, axis)\u001b[39m\n\u001b[32m    580\u001b[39m     @final\n\u001b[32m    581\u001b[39m     @classmethod\n\u001b[32m    582\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m _get_axis_name(cls, axis: Axis) -> Literal[\u001b[33m\"index\"\u001b[39m, \u001b[33m\"columns\"\u001b[39m]:\n\u001b[32m--> \u001b[39m\u001b[32m583\u001b[39m         axis_number = cls._get_axis_number(axis)\n\u001b[32m    584\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m cls._AXIS_ORDERS[axis_number]\n",
@@ -382,9 +382,7 @@
    "source": [
     "df = df.drop(['PassengerId', 'Name', 'Cabin'], axis=2)\n",
     "\n",
-    "# Convert categorical columns into numeric using dummies\n",
-    "df = pd.get_dummies(df, drop_first=True)\n",
-    "print(\"Data after encoding:\", df.head())"
+    "# Convert categorical columns into numeric using dummies\n"
    ]
   },
   {
@@ -396,11 +394,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data after encoding:     Age  RoomService  FoodCourt  ShoppingMall     Spa  VRDeck  Transported  \\\n",
+      "0  39.0          0.0        0.0           0.0     0.0     0.0        False   \n",
+      "1  24.0        109.0        9.0          25.0   549.0    44.0         True   \n",
+      "2  58.0         43.0     3576.0           0.0  6715.0    49.0        False   \n",
+      "3  33.0          0.0     1283.0         371.0  3329.0   193.0        False   \n",
+      "4  16.0        303.0       70.0         151.0   565.0     2.0         True   \n",
+      "\n",
+      "   Deck_B  Deck_C  Deck_D  ...  Name_Zinonon Veriedeezy  \\\n",
+      "0    True   False   False  ...                    False   \n",
+      "1   False   False   False  ...                    False   \n",
+      "2   False   False   False  ...                    False   \n",
+      "3   False   False   False  ...                    False   \n",
+      "4   False   False   False  ...                    False   \n",
+      "\n",
+      "   Name_Zinopus Spandisket  Name_Zinor Axlentindy  Name_Zinor Proorbeng  \\\n",
+      "0                    False                  False                 False   \n",
+      "1                    False                  False                 False   \n",
+      "2                    False                  False                 False   \n",
+      "3                    False                  False                 False   \n",
+      "4                    False                  False                 False   \n",
+      "\n",
+      "   Name_Zinoth Lansuffle  Name_Zosmark Trattle  Name_Zosmark Unaasor  \\\n",
+      "0                  False                 False                 False   \n",
+      "1                  False                 False                 False   \n",
+      "2                  False                 False                 False   \n",
+      "3                  False                 False                 False   \n",
+      "4                  False                 False                 False   \n",
+      "\n",
+      "   Name_Zosmas Ineedeve  Name_Zosmas Mormonized  Name_Zubeneb Pasharne  \n",
+      "0                 False                   False                  False  \n",
+      "1                 False                   False                  False  \n",
+      "2                 False                   False                  False  \n",
+      "3                 False                   False                  False  \n",
+      "4                 False                   False                  False  \n",
+      "\n",
+      "[5 rows x 13214 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "df = pd.get_dummies(df, drop_first=True)\n",
+    "print(\"Data after encoding:\", df.head())"
    ]
   },
   {
